--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <title>CV Nguyen Kim Quang Huy</title>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/solid.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/brands.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/solid.min.css"> -->
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/brands.min.css"> -->
     </head>
     <body>
         <div class="container">
@@ -15,7 +14,7 @@
                     <div class="img">
                         <img src="img.jpg">
                     </div>
-                    <h2>Nguyễn Kim Quang Huy<br><span>K66CCLC - UET</span></h2>
+                    <!-- <h2>Nguyễn Kim Quang Huy<br><span>K66CCLC - UET</span></h2> -->
                 </div>
 
                 <div class="contact-info">
@@ -77,11 +76,26 @@
                             </span>
                         </li>
                     </ul>
+                </div>
+                <div class="contact-info award">
+                    <h2 class="title">Danh hiệu và giải thưởng</h2>
+                    <div class="box1">
+                        <h5>2021<br></h5>
+                        <p>Giải ba Kỳ thi ICPC khu vực phía
+                            Bắc 2021</p>
+                    </div>
                     
+                    <div class="box1">
+                        <h5>2020</h5>
+                        <p>Giải nhì HSG cấp tỉnh môn Tin học</p>
+                    </div>
                 </div>
             </div>
 
             <div class="right-side">
+                <div class="name"> 
+                    <h1>NGUYỄN KIM QUANG HUY</h1>
+                </div>
                 <div class="about">
                     <h2 class="title2">Thông tin cá nhân</h2>
                     <ul>
