--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
     <head>
         <title>CV Nguyen Kim Quang Huy</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/solid.min.css"> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/brands.min.css"> -->
     </head>
     <body>
         <div class="container">
@@ -14,7 +12,6 @@
                     <div class="img">
                         <img src="img.jpg">
                     </div>
-                    <!-- <h2>Nguyễn Kim Quang Huy<br><span>K66CCLC - UET</span></h2> -->
                 </div>
 
                 <div class="contact-info">
@@ -88,6 +85,7 @@
                     <div class="box1">
                         <h5>2020</h5>
                         <p>Giải nhì HSG cấp tỉnh môn Tin học</p>
+                        <p>Thành viên Đội tuyển HSGQG</p>
                     </div>
                 </div>
             </div>
@@ -171,28 +169,6 @@
                         <li>Khả năng làm việc nhóm</li>
                     </ul>
                 </div>
-                
-                <!-- <div class="about">
-                    <h2 class="title2">Danh hiệu và giải thưởng</h2>
-                    <div class="box">
-                        <div class="award">
-                            <h5>2021</h5>
-                        </div>
-                        <div class="award_text">
-                            <p>Giải ba Kỳ thi ICPC khu vực phía
-                                Bắc 2021</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="award">
-                            <h5>2020</h5>
-                        </div>
-                        <div class="award_text">
-                            <p>Giải nhì HSG cấp tỉnh môn Tin học</p>
-                            <p>Đội tuyển quốc gia môn Tin học</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </body>
